testsuite/good/AttributeAssign.flux
type AttributeAssign {

}
attributes {
   int x = 2;
}